# HuaweiAscend

./: .gitignore  README.md  Readme.md  Readme_EN.md
AscendCamera/: run_present_server.sh
AscendCamera/presenterserver/display/config/: config.conf
AscendCamera/script/: build_ezdvpp.sh  deploy.sh
AscendCamera/src/: Main.cpp  ascend_camera_common.h  camera.cpp  main_process.h  param_configure.conf  parameter_utils.cpp
GestureDetect/inc/: gesture_detect.h  gesture_process.h  model_process.h  pose_process.h  utils.h
GestureDetect/model/: openpose_deploy.om  stgcn.om  stgcn_deploy.om
GestureDetect/script/: send_image.py
GestureDetect/script/presenterserver/display/src/: display_server.py
GestureDetect/src/: CMakeLists.txt  acl.json  gesture_detect.cpp  gesture_process.cpp  main.cpp  model_process.cpp  pose_process.cpp  pose_process0.cpp  sample_process.cpp  utils.cpp
OpenPose/: CMakeLists.txt
OpenPose/inc/: gesture_detect.h  gesture_process.h  utils.h
OpenPose/send_image/: send_image.py
OpenPose/src/: CMakeLists.txt  gesture_detect.cpp  gesture_process.cpp  main.cpp  model_process.cpp
doc/: 开发指导说明书.docx  测试方案.docx  设计文档.docx  部署指导.docx  项目介绍.docx
for_atlas200dk_1.7x.0.0_c++/: README.md
for_atlas200dk_1.7x.0.0_c++/gesture_detection_opencv/: CMakeLists.txt
for_atlas200dk_1.7x.0.0_c++/gesture_detection_opencv/inc/: gesture_detect.h  gesture_process.h  pose_process.h  utils.h
for_atlas200dk_1.7x.0.0_c++/gesture_detection_opencv/script/: send_image.py
for_atlas200dk_1.7x.0.0_c++/gesture_detection_opencv/script/presenterserver/display/config/: config.conf
for_atlas200dk_1.7x.0.0_c++/gesture_detection_opencv/src/: gesture_detect.cpp  gesture_process.cpp  main.cpp  pose_process.cpp  utils.cpp
for_atlas200dk_1.7x.0.0_c++/test/: README.md
for_atlas200dk_c++/: README.md
for_atlas200dk_c++/GestureDetection/: CMakeLists.txt
for_atlas200dk_c++/GestureDetection/inc/: camera.h  gesture_process.h  model_process.h  utils.h
for_atlas200dk_c++/GestureDetection/model/: stgcn-deploy.om
for_atlas200dk_c++/GestureDetection/script/presenterserver/display/config/: config.conf
for_atlas200dk_c++/GestureDetection/script/presenterserver/display/src/: display_server.py
for_atlas200dk_c++/GestureDetection/src/: CMakeLists.txt  camera.cpp  gesture_detect.cpp  gesture_process.cpp  main.cpp  model_process.cpp  pose_process.cpp  utils.cpp
for_atlas200dk_cplusplus/: README.md
for_atlas200dk_cplusplus/GestureDetection/inc/: gesture_detect.h  pose_process.h
for_atlas200dk_cplusplus/GestureDetection/model/: openpose.om
for_atlas200dk_cplusplus/GestureDetection/script/: param.conf  run_presenter_server.sh  send_image.py
for_atlas200dk_cplusplus/GestureDetection/src/: CMakeLists.txt  gesture_detect.cpp  pose_process.cpp
script/: func_util.sh
src/: CMakeLists.txt  ascend_camera_parameter.cpp  main_process.cpp  output_info_process.cpp
st-gcn/: convert_pb.py  gen_tfrecord_dataset.py  inference_pb.py  requirements.txt  solver.py  train.py
st-gcn/graph/: __init__.py  kinetics.py  tools.py
st-gcn/make-dataset/: data_augment.py  data_clean.py  data_rename.py  make_dataset.py  数据集制作.md
st-gcn/model/: stgcn.py
